# lean4

./: .gitattributes  .gitignore  .gitpod.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSES  e.txt  flake.nix
tests/: .gitignore  CMakeLists.txt  README.md  bench_build.sh  bench_other.sh  build_lean_header_snapshots.sh  env_bench.sh  env_test.sh  evict.py  fix_expected.py  flake.nix  lint.py  measure.py  rapidhash_repro.lean  trace_timings.py  util.sh  with_env.sh.in
tests/bench/: dag_hassorry_issue.lean  incr_header_load.lean.before.sh  incr_header_save.lean.out.expected
tests/bench/mergeSort/: bench.py  bench2.py
tests/compile/: .gitignore  StackOverflowTask.lean.init.sh  arrayMapIdxInPlace.lean  arrayMapIdxInPlace.lean.out.expected  byteArrayCopySliceBignum.lean  byteArrayCopySliceBignum.lean.out.expected  char_escape.lean  char_escape.lean.out.expected  compact_closure.lean  compact_closure.lean.out.expected  compact_closure_cross.lean  compact_closure_cross.lean.out.expected  compactor_chain.lean  dep_regions.lean  dep_regions_miss.lean  file_read_overflow.lean  float.lean  float.lean.out.expected  incr_cli_snapshot.lean  incr_header_mismatch.lean  large_closure_bug.lean  noinline_unsafeCast.lean  phashmap_alter.lean  rbmap_library.lean  run_bench.sh  run_test.sh
tests/compile_bench/: .gitignore  channel.lean  channel.lean.init.sh  const_fold.lean.init.sh  deriv.lean.init.sh  http_server.lean  http_server.lean.init.sh  http_server.lean.out.expected  ilean_roundtrip.lean.init.sh  incr_header_load.lean  incr_header_save.lean  io_compute.lean  io_compute.lean.out.expected  iterators.lean  nat_repr.lean.init.sh  phashmap.lean.init.sh  rbmap_library.lean  run_bench.sh  run_test.sh  select.lean  select.lean.init.sh  select.lean.out.expected  sigmaIterator.lean  sigmaIterator.lean.init.sh  workspaceSymbolsNewRanges.lean  workspaceSymbolsNewRanges.lean.out.expected
tests/docparse/: .gitattributes  blockOpener_0004.txt.out.expected  blockOpener_0005.txt  blockOpener_0005.txt.out.expected  blockOpener_0006.txt  blockOpener_0006.txt.out.expected  blockOpener_0007.txt  blockOpener_0007.txt.out.expected  blocks_0055.txt  blocks_0055.txt.out.expected  run_test.sh
tests/elab/: .gitignore  10067.lean  1017.lean.out.expected  10234.lean  10234.lean.out.expected  1024.lean.out.expected  1026.lean  1026.lean.out.expected  10577.lean  10753.lean  10771.lean  10830.lean  10850.lean  10984.lean  1113.lean  11337.lean  1158.lean  1171.lean.out.expected  11719.lean  1179b.lean.out.expected  12229.lean  1234.lean  1237.lean.out.expected  12386.lean  12563.lean  12676.lean  12815.lean  12897.lean  13043.lean  13203.lean  13268.lean  13268.lean.out.expected  13269.lean  13310.lean  13313.lean  13371.lean  13407.lean  13415.lean  13485.lean  13512.lean  (+820 more)
tests/elab_bench/: cbv_aes.lean  cbv_arm_ldst.lean  cbv_decide.lean  cbv_dedup.lean  cbv_divisors.lean  cbv_leroy.lean  cbv_merge_sort.lean  charactersIn.lean  delayed_assign.lean  delayed_sharing.lean  grind_bitvec2.lean  run_bench.sh  run_test.sh  simp_congr.lean  string_simp_ne.lean
tests/elab_fail/: .gitignore  10488.lean  10488.lean.out.expected  1050.lean.out.expected  1719.lean.out.expected  2273.lean.out.expected  361.lean.out.expected  906.lean.out.expected  byStrictIndent.lean  byStrictIndent.lean.out.expected  conv1.lean.out.expected  ctorUnivTooBig.lean.out.expected  decreasing_by.lean.out.expected  defInst.lean.out.expected  doNotation1.lean.out.expected  dsimpViaConst.lean  dsimpViaConst.lean.out.expected  eagerUnfoldingIssue.lean.out.expected  emptyTypeAscription.lean.out.expected  exceptionalTrace.lean.out.expected  forward_type_reference_collision.lean  forward_type_reference_collision.lean.out.expected  forward_type_reference_unresolved.lean  forward_type_reference_unresolved.lean.out.expected  guessLexDiff.lean.out.expected  hygienicIntro.lean.out.expected  inductionErrors.lean.out.expected  linterUnusedVariables.lean  linterUnusedVariables.lean.out.expected  macroSwizzle.lean.out.expected  matchUnknownFVarBug.lean.out.expected  metaDefSuppressInsideQuot.lean  metaDefSuppressInsideQuot.lean.out.expected  mutwf1.lean.out.expected  mvarAtDefaultValue.lean.out.expected  namedHoles.lean.out.expected  partialSyntaxTraces.lean.out.expected  phashmap_inst_coherence.lean.out.expected  rewrite.lean.out.expected  run_test.sh  (+10 more)
tests/lake/: .gitignore  lakefile.toml  run_clean.sh  run_test.sh
tests/lean/: foo.lean
tests/misc/: lean_ghash.sh  lean_help.sh  lean_unknown_file.sh  lean_unknown_option.sh  lean_version.sh  run_test.sh
tests/misc_bench/: import Lean cold.sh  import Lean.sh  re-elab Init.Data.BitVec.Lemmas.sh  re-elab Init.Data.List.Basic.sh  re-elab Init.Data.List.Sublist.sh  re-elab watchdog Init.Data.List.Sublist.sh  run_bench.sh
tests/server/: diags.lean  diags.lean.before.sh  diags.lean.content_diag.json  run_test.sh
tests/server_interactive/: 12369.lean  12369.lean.out.expected  2058.lean.out.expected  4880.lean.out.expected  5659.lean.out.expected  6594.lean.out.expected  8108.lean  8108.lean.out.expected  Diff.lean.out.expected  cancellation.lean  cancellation.lean.out.expected  cancellation_async_snapshot.lean  cancellation_async_snapshot.lean.out.expected  cancellation_empty_by.lean  cancellation_empty_by.lean.init.sh  cancellation_empty_by.lean.out.expected  cancellation_par.lean  cancellation_par.lean.out.expected  cancellation_try_plain.lean  compNamespace.lean  compNamespace.lean.out.expected  completionEmptyBy.lean  completionEmptyBy.lean.out.expected  completionEmptyByBracketed.lean  completionEmptyByBracketed.lean.out.expected  completionPrefixIssue.lean.out.expected  completionTactics.lean  completionTactics.lean.out.expected  editAfterError.lean.out.expected  goalsAccomplished.lean.out.expected  haveInfo.lean.out.expected  highlightMatches.lean.out.expected  hover.lean  hover.lean.out.expected  hoverDoForIn.lean  hoverDoForIn.lean.out.expected  hoverMutVarInDiagnostic.lean  hoverMutVarInDiagnostic.lean.out.expected  impossibleTactic.lean  impossibleTactic.lean.out.expected  (+34 more)
(+4733 files in other folders)
